[gd_scene load_steps=12 format=3 uid="uid://c0w4rux4knfcp"]

[ext_resource type="Script" uid="uid://o57g44ps88y3" path="res://rhythmgame_menu/rg_gamemenu_assets/scripts/difficulty_menu.gd" id="1_rgywp"]
[ext_resource type="Texture2D" uid="uid://x5jnceo0jflh" path="res://rhythmgame_menu/rg_gamemenu_assets/images/neon_glitch.jpg" id="2_5cu46"]
[ext_resource type="FontFile" uid="uid://dbhmrndrp70h0" path="res://rhythmgame_menu/rg_gamemenu_assets/font/game_over.ttf" id="2_6ht78"]
[ext_resource type="AudioStream" uid="uid://dpt2wsucjkya1" path="res://rhythmgame_menu/rg_gamemenu_assets/soundEffects/button_click.mp3" id="4_8wdma"]
[ext_resource type="Script" uid="uid://o7yoiegrsp2v" path="res://rhythmgame_menu/rg_gamemenu_assets/scripts/button_sound.gd" id="4_e5avv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cu46"]
bg_color = Color(0.18039216, 0.16078432, 0.30588236, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5avv"]
bg_color = Color(0.101960786, 0.08627451, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wdma"]
bg_color = Color(0.23921569, 0.20784314, 0.46666667, 1)

[sub_resource type="Animation" id="Animation_5cu46"]
resource_name = "bounce_in_from_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1168, 142), Vector2(682, 147)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1169, 309), Vector2(685, 307)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1171, 475), Vector2(688, 468)]
}

[sub_resource type="Animation" id="Animation_e5avv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EasyButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1168, 142)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MediumButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1169, 309)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HardButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1171, 475)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5avv"]
_data = {
&"RESET": SubResource("Animation_e5avv"),
&"bounce_in_from_right": SubResource("Animation_5cu46")
}

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rgywp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 653.0
texture = ExtResource("2_5cu46")
expand_mode = 2

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 272.0
offset_right = 639.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 156
text = "Choose Difficulty"

[node name="EasyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1168.0
offset_top = 142.0
offset_right = 1467.0015
offset_bottom = 200.99997
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Easy"
expand_icon = true

[node name="MediumButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1169.0
offset_top = 309.0
offset_right = 1467.001
offset_bottom = 367.9997
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Medium"
expand_icon = true

[node name="HardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1171.0
offset_top = 475.0
offset_right = 1469.9978
offset_bottom = 534.0029
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 89
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Hard"
expand_icon = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 502.0
offset_right = 285.0
offset_bottom = 549.0
theme_override_fonts/font = ExtResource("2_6ht78")
theme_override_font_sizes/font_size = 67
theme_override_styles/normal = SubResource("StyleBoxFlat_5cu46")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e5avv")
theme_override_styles/hover = SubResource("StyleBoxFlat_8wdma")
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e5avv")
}
autoplay = "bounce_in_from_right"

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8wdma")
script = ExtResource("4_e5avv")

[connection signal="pressed" from="EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
